# qrcode

./: .gitignore  DEPLOYMENT.md  README.md  TODO.MD  TODO.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: deploy.yml
ADR/: 0001-project-design.md  0001-wasm-dependency-resolution.md  0002-wasm-dependency-resolution.md  0003-qrcode-library-and-custom-renderer.md  0004-svg-as-source-of-truth.md
bindings/wasm/: Cargo.toml  package.json
bindings/wasm/pkg/: package.json  qrcode_wasm.d.ts  qrcode_wasm.js  qrcode_wasm_bg.wasm  qrcode_wasm_bg.wasm.d.ts  tsconfig.json
bindings/wasm/src/: lib.rs
core/: Cargo.toml  package.json
core/src/: format_conversion.rs  lib.rs  svg_rendering.rs
examples/web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
examples/web/public/: 404.html
examples/web/src/: Disclaimer.tsx  JPGQRCode.tsx  PNGQRCode.tsx  QRCodeGenerator.tsx  SVGQRCode.tsx  main.ts  main.tsx  types.ts
