[package]
name = "qrcode-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for QR code generation"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
qrcode-core = { path = "../../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
base64 = "0.22.1"
console_log = "1.0"
log = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
] }
